# content

./: .gitignore  key_gen.py  pyproject.toml  requirements.txt  server.py
static/: state.css
templates/: index.html  state.html
