[tool.poetry]
name = "india"
version = "0.1.0"
description = ""
authors = ["Akhil Robert <akhilrobert2412@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"
Flask-PyMongo = "^2.3.0"
python-dotenv = "^0.21.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
